--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<link rel="stylesheet" href="src/css/reset.css">
 		<link rel="stylesheet" href="src/css/login.css">
 		<link rel="stylesheet" href="src/css/home.css">
+		<link rel="stylesheet" href="src/css/game.css">
 		<link rel="stylesheet" href="src/css/shop.css">
 		<link rel="stylesheet" href="src/css/bestiary.css">
 		<link rel="stylesheet" href="src/css/leaderboards.css">
