Fixed the game and a bit of styling

--- a/client/index.html
+++ b/client/index.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="src/css/login.css">
         <link rel="stylesheet" href="src/css/home.css">
         <link rel="stylesheet" href="src/css/shop.css">
+        <link rel="stylesheet" href="src/css/game.css">
         <link rel="stylesheet" href="src/css/bestiary.css">
         <link rel="stylesheet" href="src/css/leaderboards.css">
 
@@ -25,5 +26,5 @@
         <div id="root"></div>
         <!-- <div id="phaser"></div> -->
     </body>
-    <script src="src/buttonListener.js"></script>
+    <!-- <script src="src/buttonListener.js"></script> -->
 </html>
