--- a/client/public/index.html
+++ b/client/public/index.html
@@ -26,5 +26,5 @@
         <div id="root"></div>
         <!-- <div id="phaser"></div> -->
     </body>
-    <!-- <script src="src/buttonListener.js"></script> -->
+    <script src="src/buttonListener.js"></script>
 </html>
