--- a/client/public/index.html
+++ b/client/public/index.html
@@ -36,7 +36,6 @@ const swapCREATE = document.querySelector('.swapCreateBTN');
 
 if (swapLOG) {
 	swapLOG.addEventListener('click', () => {
-		console.log('test');
 	var createVIS = CREATEPanel.getAttribute('data-visible');
 		if (createVIS === "true") {
 			CREATEPanel.setAttribute('data-visible', false);
@@ -50,7 +49,6 @@ if (swapLOG) {
 
 if (swapCREATE) {
 	swapCREATE.addEventListener('click', () => {
-		console.log('test');
 		var loginVIS = LOGINPanel.getAttribute('data-visible');
 		if (loginVIS === "true") {
 			CREATEPanel.setAttribute('data-visible', true);
@@ -62,32 +60,32 @@ if (swapCREATE) {
 	})
 }
 
-var clickableHoverSource = "./public/assets/clickable-hover.wav";
-var clickableHover;
+// var clickableHoverSource = "./public/assets/clickable-hover.wav";
+// var clickableHover;
 
-var clickableClickSource = "./public/assets/high-bloop.mp3";
-var clickableClick;
+// var clickableClickSource = "./public/assets/high-bloop.mp3";
+// var clickableClick;
 
-const clickable = document.querySelectorAll('.clickable');
+// const clickable = document.querySelectorAll('.clickable');
 
-if (clickable) {
-	for (var i=0; i<clickable.length; i++) {
-		clickable[i].addEventListener('mouseover', () => {
-			clickableHover = new Audio(clickableHoverSource);
-			clickableHover.muted = false;
-			clickableHover.volume = .80;
-			clickableHover.play();
-		})
-	}
-	for (var i=0; i<clickable.length; i++) {
-		clickable[i].addEventListener('click', () => {
-			clickableClick = new Audio(clickableClickSource);
-			clickableClick.muted = false;
-			clickableClick.volume = .80;
-			clickableClick.play();
-		})
-	}
-}
+// if (clickable) {
+// 	for (var i=0; i<clickable.length; i++) {
+// 		clickable[i].addEventListener('mouseover', () => {
+// 			clickableHover = new Audio(clickableHoverSource);
+// 			clickableHover.muted = false;
+// 			clickableHover.volume = .80;
+// 			clickableHover.play();
+// 		})
+// 	}
+// 	for (var i=0; i<clickable.length; i++) {
+// 		clickable[i].addEventListener('click', () => {
+// 			clickableClick = new Audio(clickableClickSource);
+// 			clickableClick.muted = false;
+// 			clickableClick.volume = .80;
+// 			clickableClick.play();
+// 		})
+// 	}
+// }
 
 const signOutConfirm = document.querySelector(".holderHolder");
 
